--- a/index.html
+++ b/index.html
@@ -4,47 +4,15 @@
 		<meta charset="utf-8" />
 		<title>Hello World!</title>
 		<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-		<style>
-			body {
-				background-color: grey;
-			}
-			#top-window, #bottom-window {
-				width: 90%,
-				height:30%
-				background-color: white;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body onload="init()">
 		<textarea id="top-window" disabled="true"></textarea>
 		<div id="function-bar">function bar</div>
-		<textarea id="bottom-window"></textarea>
+		<textarea id="bottom-window" onkeypress="checkSend()"></textarea>
 		<div id="bottom-bar">
 			<input type="submit" onClick="sendMessage()"/>
 		</div>
 	</body>
-	<script>
-		function init() {
-			//todo: init top window
-		}
-
-		function sendMessage() {
-			document.getElementById('top-window').value += "\n" + document.getElementById('bottom-window').value
-
-			const { spawn } = require('child_process');
-			const toExec = document.getElementById('bottom-window').value
-			const command = spawn(toExec);
-			command.stdout.on('data', (data) => {
-				document.getElementById('top-window').value += "\n" + data
-			});
-
-			command.stderr.on('data', (data) => {
-				console.error(`stderr: ${data}`);
-			});
-
-			command.on('close', (code) => {
-				console.log(`child process exited with code ${code}`);
-			});
-		}
-	</script>
+	<script src="functions.js"></script>
 </html>
