ui and ux tweaks
autofocus to textarea on startup
top window automatically scrolls to bottom on message submission
both windows are larger by default

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div id="bottom-bar">
 			<input type="submit" onClick="sendMessage()"/>
 		</div>
+		<div id="wow" style="height: 400px; width: 400px; -webkit-appearance: textarea;"></div>
 	</body>
 	<script src="functions.js"></script>
 </html>
