--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body onload="init()">
-		<textarea id="top-window" disabled="true"></textarea>
+		<div id="top-window" disabled="true"></div>
 		<div id="function-bar">function bar</div>
 		<textarea id="bottom-window" onkeypress="checkSend()"></textarea>
 		<div id="bottom-bar">
