make the ui fit AIM more

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 		<div id="function-bar">function bar</div>
 		<textarea id="bottom-window" onkeypress="checkSend()"></textarea>
 		<div id="bottom-bar">
-			<input type="submit" onClick="sendMessage()"/>
+			<button onClick="sendMessage()">
+				<img src="aim.png" />
+				<div>send</div>
+			</button>
 		</div>
-		<div id="wow" style="height: 400px; width: 400px; -webkit-appearance: textarea;"></div>
 	</body>
 	<script src="functions.js"></script>
 </html>
